syntax = "proto3";

package com.nationsbenefits.igloo.authorization.models.protobuf;

import "com/nationsbenefits/igloo/common/models/protobuf/common_models.proto";

option java_multiple_files = true;
option java_package = "com.nationsbenefits.igloo.authengine.grpc";
option java_outer_classname = "AdjudicationProto";



service AplAdjudicationService {
  rpc processAplAdjudication (AdjudicationRequest) returns (AdjudicationResponse) {
  }
}

/**
 * Transaction auth status for APL Adjudication status.
 */

message AdjudicationStatus {


  /**
     * Status code will be one for the following.
     * 000, 100, 200, 201, 202, 203, 204, 205, 206,
    */

  string code = 1;

  /**
     *  Description to each of the status code.
     *
     * - "Transaction fully approved; more details at line items" #000
     * - "Transaction partially approved; more details at line items" #100
     * - "Transaction entirely declined due to unauthorized products in the basket" #200
     * - "Transaction entirely declined due to card reported lost or stolen" #201
     * - "Transaction entirely declined due to card not activated" #202
     * - "Transaction entirely declined due to no funds in the purses" #203
     * - "Transaction entirely declined due to other membership issues. contact nations for more details" #204
     * - "Transaction entirely declined due to purchase at an unauthorized store location or online retailer or country" #205
     * - "Transaction entirely declined due to suspected fraud" #206
    */

  string desc = 2 ;
}


/**
 * Adjudication response from the adjudication service.
 */

message AdjudicationResponse {

  // Transaction details sent by merchant
  com.nationsbenefits.igloo.common.models.protobuf.Transaction transaction = 1;

  // Unique transaction ID generated by nations benefits.
  // SHA256 Hash [Member_ID + Merchant_ID + Store_ID (Optional) + Terminal_ID(Optional)+ BAS_Server_TimeStamp + (AdjudicationResponse.authorizedTransactionAmount) ]
  string nationsBenefitsTransactionId = 2;

  // Represents the authorized total transaction amount.
  com.nationsbenefits.igloo.common.models.protobuf.Amount authorizedTransactionAmount = 3;

  // Status of call to perform Approved Product List adjudication.
  AdjudicationStatus status = 4;

  // The list of product authorization responses. This contains the authorization status and details for each product in the transaction.
  // Product level adjudication will be populated only when status will be fully approved or partially approved.
  repeated ProductAdjudicationResponse productAdjudicationResponses = 5;

  // Lists all the purse account balances.
  repeated com.nationsbenefits.igloo.common.models.protobuf.PurseAccount purseAccounts = 6;
}



message ProductAdjudicationResponse {

  // Product details
  com.nationsbenefits.igloo.common.models.protobuf.Product product = 1;

  // purse identifier for the product. This is used to determine the purse for the product.
  string purseType = 2;

  //
  com.nationsbenefits.igloo.common.models.protobuf.Amount authorizedAmountBeforeTax = 3;

  //
  com.nationsbenefits.igloo.common.models.protobuf.Amount authorizedTax = 4;

  //
  com.nationsbenefits.igloo.common.models.protobuf.Amount authorizedFees = 5;

  string authResult = 6;

  ProductAdjudicationStatus status = 7;

}



/**
 * Product auth status for APL Adjudication status.
 */

message ProductAdjudicationStatus {


  /**
     * Status code will be one for the following.
     * 100, 110, 111, 112, 120, 121, 122, 123, 200,210,211,220,221,222,223.
    */

  string code = 1 ;

  /**
     *  Description to each of the status code.
     *
     *  - "Approved, and sufficient funds in purse." #100
     *  - "Approved product, insufficient purse funds" #110
     *  - "Exceeded item limit for specific product, but some quantity approved" #111
     *  - "Exceeded dollar limit for specific product, but partial dollar amount approved" #112
     *  - "Approved product but no funds in purse" #120
     *  - "Attempted to purchase a non-allowable item (not on APL)" #121
     *  - "Exceeded item limit for specific product or category" #122
     *  - "Exceeded dollar limit for specific product or category" #123
     *  - "Return approved, funds will be restored to purse" #200
     *  - "Return exceeds original purchase quantity, but partial return approved" #210
     *  - "Return exceeds original purchase amount, but partial return approved" #211
     *  - "Return attempted for non-allowable item (not on APL)" #220
     *  - "Return would exceed purse dollar limit" #221
     *  - "No record of such an item being purchased by the member" #222
     *  - "Return attempted after allowed period (180 days after purchase)" #223
    */

  string desc = 2;
}



message AdjudicationRequest {

  //The card object. Takes in either PAN Hash or ID
  com.nationsbenefits.igloo.common.models.protobuf.Card card = 1;

  /**
      The merchant information
   */
  com.nationsbenefits.igloo.common.models.protobuf.Merchant merchant = 2;

  /**
      The transaction details. It also contains the product details
   */
  com.nationsbenefits.igloo.common.models.protobuf.Transaction transaction = 3;

}